# wachtor

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
skills/openclaw/: SKILL.md  openclaw.json.example
specs/: 2026-02-14-audit-dashboard.md  2026-02-14-docker-compose-improvements.md  extensible-tools.md
src/agent_gate/: __main__.py  cli.py  client.py  config.py  engine.py  executor.py  registry.py  server.py
src/agent_gate/services/: http.py
src/agentpass/: __main__.py  config.py  db.py  server.py
src/agentpass/dashboard/: __init__.py  routes.py
src/agentpass/dashboard/templates/: audit.html
src/agentpass/messenger/: base.py  telegram.py
tests/: test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_engine.py  test_executor.py  test_http_service.py  test_integration.py  test_main.py  test_plugin.py  test_registry.py  test_server.py  test_telegram.py  test_tool_loading.py
tools/: homeassistant.yaml
